--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <button>登录</button>
                     <button>注册</button>
                     <button><a href="./index1.html">跳过</a></button>
+                    <p>由于技术有限，请点击“跳过”进入下一界面</p>
                 </form>
             </div>
         </div>
