--- a/index1.html
+++ b/index1.html
@@ -42,9 +42,9 @@
             <div class="list">
                 <ul>
                     <li>个人页面名单（点击进入）</li>
-                    <li><a href="./sonsy/lyhsy.html" target="_blank">凉门个人页面</a></li>
-                    <li><a href="./sonsy/zhsy.html" target="_blank">Pierrot个人页面</a></li>
-                    <li><a href="./sonsy/zysy.html" target="_blank">屑凉个人页面</a></li>
+                    <li><a href="./ALL/sonsy/lyhsy.html" target="_blank">凉门个人页面</a></li>
+                    <li><a href="./ALL/sonsy/zhsy.html" target="_blank">Pierrot个人页面</a></li>
+                    <li><a href="./ALL/sonsy/zysy.html" target="_blank">屑凉个人页面</a></li>
                 </ul>
             </div>
         </div>
